tdf#127561 avoid shapes with currently invalid positions

where getAccessibleCellAt would throw and just ignore
the shape, seems to be a temporary problem and the correct
position becomes known later.

Change-Id: I736be9675a03e0a1cb98ceb29caf2d7869c84535