sc/source/ui/Accessibility/AccessibleDocument.cxx
@@ -1136,9 +1136,15 @@ uno::Reference<XAccessibleRelationSet> ScChildrenShapes::GetRelationSet(const Sc
         uno::Reference<XAccessible> xAccessible = mpAccessibleDocument->GetAccessibleSpreadsheet(); // should be the current table
         if (pData->xRelationCell && xAccessible.is())
         {
-            uno::Reference<XAccessibleTable> xAccTable (xAccessible->getAccessibleContext(), uno::UNO_QUERY);
-            if (xAccTable.is())
-                xAccessible = xAccTable->getAccessibleCellAt(pData->xRelationCell->Row(), pData->xRelationCell->Col());
+            sal_Int32 nRow = pData->xRelationCell->Row();
+            sal_Int32 nColumn = pData->xRelationCell->Col();
+            bool bPositionUnset = nRow == -1 && nColumn == -1;
+            if (!bPositionUnset)
+            {
+                uno::Reference<XAccessibleTable> xAccTable(xAccessible->getAccessibleContext(), uno::UNO_QUERY);
+                if (xAccTable.is())
+                    xAccessible = xAccTable->getAccessibleCellAt(nRow, nColumn);
+            }
         }
         AccessibleRelation aRelation;
         aRelation.TargetSet.realloc(1);
